--- a/.github/workflows/Tags.yml
+++ b/.github/workflows/Tags.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
    check-version:
-    runs-on: macOS-11
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@master
       - name: Get the version
